2008-08-15 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b13

 * ImageMap fixes

   - No new ImageMaps at all :-(
   - Choosing brush color broken.
   - Several ways to hangup JS.
   - PHP notice due to missing var.

 * Fix: Zip Icon in thumbs view missing.

 * New (because of fixes abov)
   Param $updatePreview and $label for colorpicker.

 * Fix: PHP notice when viewing a hidden photo.

2008-08-15 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b12

 * Fix: Copying a photo from a subalbum into the same album did not work.

 * Fix: Wrong error message when try to move an item into its current place.

2008-08-15 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b11

 * Fix: Deleting comments within "comments view" did not work.

 * Fix: Added check for invalid call for Album::getComment($commentIndex)

 * Fix: Colorpicker did not work when Gallery was embedded.

 * Fix: Do not show duplicate icons in photoview.

 * Change: Gallery ran in Zikula, but now it KNOWS that it runs in Zikula.

2008-08-13 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b10

 * Fix: Code, HTML, wording cleanup.

2008-08-13 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b9

 * Fix: Current settings of locale_alias were not selected
        and thus could overwritten by a different value.

   Thanks to Andrew Vasilyev.

2008-08-12 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b8

 * FIX: Album::deletePhoto did not return true on success.
        This for example prevented to delete images found in 
        "validate albums."

2008-08-12 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b7

 * Fix: Avoid a single entry selectbox in album view like in 1.5.7.

2008-08-12 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b6

 * Fix: testRequirement() was not complete.
        Thus some album action did not appear in the select box.

 * Fix: Voting for images broken.

 * Change: Nicer look of voting results.

 * Change: Modified Album::getVotingIdByIndex()

2008-08-12 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b5
