@@ -44,15 +44,15 @@ function attachOrphanedAlbums($orphans) {
 			while ($child->save() != true);
 			continue;
 		}
-		
+
 		$parent = $albumDB->getAlbumByName($parentname);
 		$parent->addNestedAlbum($childname);
-	
+
 		// Set a default highlight if appropriate, for the parent
 		if ($parent->numPhotos(1) == 1) {
 			$parent->setHighlight(1);
 		}
-	
+
 		// If the machine is fast, it can find a new album before it
 		// has time to finish physically saving the last one.
 		// Keep trying to save until it works.
@@ -64,20 +64,20 @@ function findOrphanedAlbums() {
 	global $albumDB;
 	$orphaned = Array();
 	foreach ($albumDB->albumList as $album) {
-		
+
 		// Root albums can't be orphans
 		if ($album->isRoot()) {
 			continue;
 		}
-	
+
 		$parent = $album->getParentAlbum();
-	
+
 		if (!isset($parent) || !isset($parent->fields['name'])) {
 			// Orphaned, but the parent album is missing - link it to root
 			$orphaned[$album->fields['name']] = 0;
 			continue;
 		}
-	
+
 		// Search for a filename match in the parent album
 		if (!empty($parent->photos)) {
 			foreach ($parent->photos as $photo) {
@@ -88,11 +88,11 @@ function findOrphanedAlbums() {
 				}
 			}
 		}
-	
+
 		// "Orphaned Album => Parent Album"
 		$orphaned[$album->fields['name']] = $parent->fields['name'];
 	}
-	
+
 	// Sort the array by value (parent) so it can be displayed to the user
 	asort($orphaned);
 	return $orphaned;
@@ -118,14 +118,14 @@ function findOrphanedImages() {
 
 		// Retrieve each file until the directory ends
 		// Skip the files which have arrays in the ignoreFiles array
-		while (false !== ($file = readdir($dirhandle))) { 
+		while (false !== ($file = readdir($dirhandle))) {
 			$file = pathinfo($file);
 
 			if (empty($file['extension']) || in_array($file['extension'], $ignoreFiles))
 				continue;
 
 			$albumFiles[$file['basename']] = 1;
-		} 
+		}
 
 		// Don't bother doing anything if there are no orphans
 		if (sizeof($albumFiles)) {
@@ -135,7 +135,7 @@ function findOrphanedImages() {
 				foreach ($album->photos as $photo) {
 					foreach ($photo as $image) {
 
-						// Theoretically we know which keys hold image locations, 
+						// Theoretically we know which keys hold image locations,
 						// however this is to be absolutely safe as we go forward
 						// in case any new keys are added
 
@@ -143,7 +143,7 @@ function findOrphanedImages() {
 						// we know we can skip any objects that aren't of the class "Image"
 						if (strcasecmp(get_class($image), "Image")) {
 							continue;
-	
+
 						// If we encounter a file that's in the AlbumItem, and in the file array
 						// purge it, because it's valid
 						} elseif (isset($albumFiles[$image->name . "." . $image->type])) {
@@ -190,38 +190,39 @@ $orphanAlbums = findOrphanedAlbums();
 $orphanImages = findOrphanedImages();
 
 global $GALLERY_EMBEDDED_INSIDE;
+
+$iconElements[] = galleryIconLink(
+				makeGalleryUrl("admin-page.php"),
+				'navigation/return_to.gif',
+				gTranslate('core', "Return to admin page"));
+
+$iconElements[] = galleryIconLink(
+				makeAlbumUrl(),
+				'navigation/return_to.gif',
+				gTranslate('core', "Return to gallery"));
+
+$iconElements[] = LoginLogoutButton(makeGalleryUrl());
+
+$adminbox['text']	= '<span class="title">'. gTranslate('core', "Find Orphans") .'</span>';
+$adminbox['commands']	= makeIconMenu($iconElements, 'right');
+
+$adminbox["bordercolor"] = $gallery->app->default["bordercolor"];
+$breadcrumb['text'][] = languageSelector();
+
 if (!$GALLERY_EMBEDDED_INSIDE) {
 	doctype();
 ?>
 <html>
 <head>
-<title><?php echo $gallery->app->galleryTitle ?>::<?php echo _("Find Orphans"); ?></title>
-<?php 
+<title><?php echo clearGalleryTitle(gTranslate('core', "Find Orphans")) ?></title>
+<?php
 	common_header();
 ?>
 </head>
 <body dir="<?php echo $gallery->direction ?>">
-<?php 
-} 
+<?php
+}
     includeHtmlWrap("gallery.header");
-    $adminbox['text'] ='<span class="head">'. gTranslate('core', "Find Orphans") .'</span>';
-    
-    $iconElements[] = galleryIconLink(
-				makeGalleryUrl("admin-page.php"),
-				'navigation/return_to.gif',
-				gTranslate('core', "Return to admin page"));
-
-    $iconElements[] = galleryIconLink(
-				makeAlbumUrl(),
-				'navigation/return_to.gif',
-				gTranslate('core', "Return to gallery"));
-
-    $iconElements[] = LoginLogoutButton(makeGalleryUrl());
-
-    $adminbox['commands'] = makeIconMenu($iconElements, 'right');
-
-    $adminbox["bordercolor"] = $gallery->app->default["bordercolor"];
-    $breadcrumb['text'][] = languageSelector();
 
     includeLayout('navtablebegin.inc');
     includeLayout('adminbox.inc');
@@ -229,11 +230,11 @@ if (!$GALLERY_EMBEDDED_INSIDE) {
     includeLayout('breadcrumb.inc');
     includeLayout('navtableend.inc');
 
-echo '<div class="popup">';
-if (empty($action)) { 
+echo '<div class="popup left">';
+if (empty($action)) {
 	if (!empty($orphanAlbums)) { ?>
-		<p><?php echo _("Orphaned Albums:") . " " . sizeof($orphanAlbums) ?></p>
-		<p><?php echo _("Orphaned Albums will be re-attached to their parent albums, if at all possible.  If the parent album is missing, the orphan will be attached to the Gallery Root, and it can be moved to a new location from there.") ?></p>
+		<p><?php echo gTranslate('core', "Orphaned Albums:") . " " . sizeof($orphanAlbums) ?></p>
+		<p><?php echo gTranslate('core', "Orphaned Albums will be re-attached to their parent albums, if at all possible.  If the parent album is missing, the orphan will be attached to the Gallery Root, and it can be moved to a new location from there.") ?></p>
 		<center>
 		<table>
 		<tr>
@@ -246,7 +247,7 @@ if (empty($action)) {
 		foreach ($orphanAlbums as $childName => $parentName) {
 			echo "\t<tr>";
 			if ($current == $parentName) {
-				echo "\n\t<td>" . ($parentName ? "<a href='" . makeAlbumUrl($albumName) . "'>" . $albumName . "</a>" : _("Gallery Root")) . "</td>";
+				echo "\n\t<td>" . ($parentName ? "<a href='" . makeAlbumUrl($albumName) . "'>" . $albumName . "</a>" : gTranslate('core', "Gallery Root")) . "</td>";
 				$current = $parentName;
 			} else {
 				echo "\n\t<td>\------</td>";
@@ -260,15 +261,16 @@ if (empty($action)) {
 		<br>
 		<?php echo makeFormIntro("tools/find_orphans.php", array("method" => "GET")); ?>
 		<input type="hidden" name="action" value="albums">
-		<input type="submit" value="<?php echo _("Re-Attach Orphaned Albums!") ?>">
+		<input type="submit" value="<?php echo gTranslate('core', "Re-Attach Orphaned Albums!") ?>">
 		</form>
 		</center>
 <?php
-	} elseif (!empty($orphanImages)) {
+	}
+	elseif (!empty($orphanImages)) {
 ?>
 
-		<p><?php echo _("Orphaned Files:") . " " . recursiveCount($orphanImages) ?></p>
-		<p><?php echo _("Orphaned files will be deleted from the disk.  Orphaned files should never exist - if they do, they are the result of a failed upload attempt, or other more serious issue such as the photos database being overwritten with bad information.") ?></p>
+		<p><?php echo gTranslate('core', "Orphaned Files:") . " " . recursiveCount($orphanImages) ?></p>
+		<p><?php echo gTranslate('core', "Orphaned files will be deleted from the disk.  Orphaned files should never exist - if they do, they are the result of a failed upload attempt, or other more serious issue such as the photos database being overwritten with bad information.") ?></p>
 		<center>
 		<table>
 		<tr>
@@ -297,39 +299,40 @@ if (empty($action)) {
 		<br>
 		<?php echo makeFormIntro("tools/find_orphans.php", array("method" => "GET")); ?>
 		<input type="hidden" name="action" value="images">
-		<input type="submit" value="<?php echo _("Delete Orphaned Files!") ?>">
+		<input type="submit" value="<?php echo gTranslate('core', "Delete Orphaned Files!") ?>">
 		</form>
 		</center>
-<?php 
-	} else {
-		// No Orphans
-		echo "\n<p align=\"center\" class=\"warning\">" .  _("No Orphans Found") . "</p>";
-		echo "\n<p align=\"center\">". _("There are no orphaned elements in this Gallery.") . "</p>\n";
+<?php
 	}
-} // !isset(update) 
-else { 
-	echo "\n<p align=\"center\" class=\"warning\">" .  sprintf(_("Orphan %s Repaired"), ($action == "albums") ? _("Albums") : _("Files")) . "</p>";
+	else {
+		// No Orphans
+		echo "\n<p align=\"center\" class=\"warning\">" .  gTranslate('core', "No Orphans Found") . "</p>";
+		echo "\n<p align=\"center\">". gTranslate('core', "There are no orphaned elements in this Gallery.") . "</p>\n";
+	}
+} // !isset(update)
+else {
+	echo "\n<p align=\"center\" class=\"warning\">" .  sprintf(gTranslate('core', "Orphan %s Repaired"), ($action == "albums") ? gTranslate('core', "Albums") : gTranslate('core', "Files")) . "</p>";
 	if ($action == "albums") {
 		attachOrphanedAlbums($orphanAlbums);
 	}
 	if ($action == "images") {
 		$unwriteableFiles = deleteOrphanedImages($orphanImages);
                 if (!empty($unwriteableFiles)) {
-			echo "<p>". gallery_error(_("The Webserver has not enough permission to delete the following files:")) . "</p>";
+			echo "<p>". gallery_error(gTranslate('core', "The Webserver has not enough permission to delete the following files:")) . "</p>";
 			echo "\n<ul>";
 			foreach ($unwriteableFiles as $filename) {
 				echo "<li>$filename</li>";
 			}
 			echo "\n</ul>";
-			echo "\n<p align=\"center\">". _("Please check the permission of these files and the folder above. chmod them, or ask your admin to do this.") . "<br>";
-			echo '<button name="Klickmich" type="button" onClick="location.reload()">'. _("Reload") . '</button></p>';
+			echo "\n<p align=\"center\">". gTranslate('core', "Please check the permission of these files and the folder above. chmod them, or ask your admin to do this.") . "<br>";
+			echo '<button name="Klickmich" type="button" onClick="location.reload()">'. gTranslate('core', "Reload") . '</button></p>';
 		}
 	}
 }
 ?>
 </div>
 <?php
-    includeHtmlWrap("gallery.footer"); 
+    includeHtmlWrap("general.footer");
     if (!$GALLERY_EMBEDDED_INSIDE) {
 ?>
 </body>
